update seed function

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
-DB_USER='root'
-DB_PASSWORD=''
+DB_USER=root
+DB_PORT=3307
+DB_PASSWORD=
 DB_NAME='social-media-app'
-DB_PORT= 3307
