--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
-    "body-parser": "^1.20.2",
-    "busboy": "^1.6.0",
+    "@ngneat/falso": "^6.4.0",
+    "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
