--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@ngneat/falso": "^6.4.0",
+    "bcrypt": "^5.1.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "mysql2": "^3.3.0",
     "reflect-metadata": "^0.1.13",
