--- a/package.json
+++ b/package.json
@@ -29,15 +29,14 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
-
-    "body-parser": "^1.20.2",
-    "busboy": "^1.6.0",
     "@ngneat/falso": "^6.4.0",
     "@types/passport-jwt": "^3.0.8",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "busboy": "^1.6.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
-
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.0",
@@ -50,7 +49,6 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
-
     "@nestjs/testing": "^9.4.0",
     "@ngneat/falso": "^6.4.0",
     "@types/express": "^4.17.13",
