Modified friend request endpoints

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ DB_PASSWORD=
 DB_NAME='social-media-app'
 SECRET = soccialMediaSecret
 GLOBAL_SALT='$2b$10$6daYVrYgfhdw9icu4VSoSe'
+GLOBAL_SALT='$2b$10$6daYVrYgfhdw9icu4VSoSe'
 
