--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DB_PASSWORD=
 DB_NAME='social-media-app'
 SECRET = soccialMediaSecret
 GLOBAL_SALT='$2b$10$6daYVrYgfhdw9icu4VSoSe'
-STORAGE_URL=D:\socialMediaPlatform-Frontend\public\images
+STORAGE_URL=C:\Users\dossc\Desktop\socialMediaPlatform-Frontend\public\images
